Changes in Login and Register behavior

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,11 @@ phpunit.phar
 
 tests/_output/*
 tests/_support/_generated
+
+# Yii temp directories
+web/assets/**
+runtime/**
+web/minify/**
+
+# composer itself is not needed
+composer.lock
