--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ tests/_support/_generated
 
 # Yii temp directories
 web/assets/**
-runtime/**
+runtime
 
 # composer itself is not needed
 composer.lock
